parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     return_statement -> RETURN expression SEMICOLON
Rule 4     statement -> variable_declaration
Rule 5     statement -> array_declaration
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> expression EQUALS expression SEMICOLON
Rule 9     statement -> function_declaration
Rule 10    statement -> return_statement
Rule 11    variable_declaration -> type IDENTIFIER EQUALS expression SEMICOLON
Rule 12    variable_declaration -> type IDENTIFIER SEMICOLON
Rule 13    array_declaration -> type IDENTIFIER SLBRACE NUMBER SRBRACE SEMICOLON
Rule 14    array_declaration -> type IDENTIFIER SLBRACE SRBRACE EQUALS LBRACE array_elements RBRACE SEMICOLON
Rule 15    array_elements -> expression
Rule 16    array_elements -> array_elements COMMA expression
Rule 17    function_declaration -> type IDENTIFIER LPAREN parameter_list RPAREN LBRACE program RBRACE
Rule 18    function_declaration -> type IDENTIFIER LPAREN RPAREN LBRACE program RBRACE
Rule 19    parameter_list -> type IDENTIFIER
Rule 20    parameter_list -> parameter_list COMMA type IDENTIFIER
Rule 21    type -> INT
Rule 22    type -> FLOAT
Rule 23    type -> BOOLEAN
Rule 24    expression -> NUMBER
Rule 25    expression -> IDENTIFIER
Rule 26    expression -> expression PLUS expression
Rule 27    expression -> expression MINUS expression
Rule 28    expression -> expression MULTIPLY expression
Rule 29    expression -> expression DIVIDE expression
Rule 30    expression -> LPAREN expression RPAREN
Rule 31    expression -> expression GREATER expression
Rule 32    expression -> expression LESS expression
Rule 33    expression -> expression AND expression
Rule 34    expression -> expression OR expression
Rule 35    expression -> expression EQEQ expression
Rule 36    expression -> expression NOTEQ expression
Rule 37    expression -> TRUE
Rule 38    expression -> FALSE
Rule 39    expression -> NOT expression
Rule 40    if_statement -> IF LPAREN expression RPAREN LBRACE program RBRACE
Rule 41    if_statement -> IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
Rule 42    while_statement -> WHILE LPAREN expression RPAREN LBRACE program RBRACE

Terminals, with rules where they appear

AND                  : 33
BOOLEAN              : 23
COMMA                : 16 20
DIVIDE               : 29
ELSE                 : 41
EQEQ                 : 35
EQUALS               : 8 11 14
FALSE                : 38
FLOAT                : 22
GREATER              : 31
IDENTIFIER           : 11 12 13 14 17 18 19 20 25
IF                   : 40 41
INT                  : 21
LBRACE               : 14 17 18 40 41 41 42
LESS                 : 32
LPAREN               : 17 18 30 40 41 42
MINUS                : 27
MULTIPLY             : 28
NOT                  : 39
NOTEQ                : 36
NUMBER               : 13 24
OR                   : 34
PLUS                 : 26
RBRACE               : 14 17 18 40 41 41 42
RETURN               : 3
RPAREN               : 17 18 30 40 41 42
SEMICOLON            : 3 8 11 12 13 14
SLBRACE              : 13 14
SRBRACE              : 13 14
TRUE                 : 37
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

array_declaration    : 5
array_elements       : 14 16
expression           : 3 8 8 11 15 16 26 26 27 27 28 28 29 29 30 31 31 32 32 33 33 34 34 35 35 36 36 39 40 41 42
function_declaration : 9
if_statement         : 6
parameter_list       : 17 20
program              : 2 17 18 40 41 41 42 0
return_statement     : 10
statement            : 1 2
type                 : 11 12 13 14 17 18 19 20
variable_declaration : 4
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (4) statement -> . variable_declaration
    (5) statement -> . array_declaration
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . expression EQUALS expression SEMICOLON
    (9) statement -> . function_declaration
    (10) statement -> . return_statement
    (11) variable_declaration -> . type IDENTIFIER EQUALS expression SEMICOLON
    (12) variable_declaration -> . type IDENTIFIER SEMICOLON
    (13) array_declaration -> . type IDENTIFIER SLBRACE NUMBER SRBRACE SEMICOLON
    (14) array_declaration -> . type IDENTIFIER SLBRACE SRBRACE EQUALS LBRACE array_elements RBRACE SEMICOLON
    (40) if_statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (41) if_statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (42) while_statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression
    (17) function_declaration -> . type IDENTIFIER LPAREN parameter_list RPAREN LBRACE program RBRACE
    (18) function_declaration -> . type IDENTIFIER LPAREN RPAREN LBRACE program RBRACE
    (3) return_statement -> . RETURN expression SEMICOLON
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN

    IF              shift and go to state 13
    WHILE           shift and go to state 15
    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18
    RETURN          shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOLEAN         shift and go to state 22

    program                        shift and go to state 1
    statement                      shift and go to state 2
    variable_declaration           shift and go to state 3
    array_declaration              shift and go to state 4
    if_statement                   shift and go to state 5
    while_statement                shift and go to state 6
    expression                     shift and go to state 7
    function_declaration           shift and go to state 8
    return_statement               shift and go to state 9
    type                           shift and go to state 10

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (4) statement -> . variable_declaration
    (5) statement -> . array_declaration
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . expression EQUALS expression SEMICOLON
    (9) statement -> . function_declaration
    (10) statement -> . return_statement
    (11) variable_declaration -> . type IDENTIFIER EQUALS expression SEMICOLON
    (12) variable_declaration -> . type IDENTIFIER SEMICOLON
    (13) array_declaration -> . type IDENTIFIER SLBRACE NUMBER SRBRACE SEMICOLON
    (14) array_declaration -> . type IDENTIFIER SLBRACE SRBRACE EQUALS LBRACE array_elements RBRACE SEMICOLON
    (40) if_statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (41) if_statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (42) while_statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression
    (17) function_declaration -> . type IDENTIFIER LPAREN parameter_list RPAREN LBRACE program RBRACE
    (18) function_declaration -> . type IDENTIFIER LPAREN RPAREN LBRACE program RBRACE
    (3) return_statement -> . RETURN expression SEMICOLON
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN

    IF              shift and go to state 13
    WHILE           shift and go to state 15
    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18
    RETURN          shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOLEAN         shift and go to state 22

    statement                      shift and go to state 23
    variable_declaration           shift and go to state 3
    array_declaration              shift and go to state 4
    if_statement                   shift and go to state 5
    while_statement                shift and go to state 6
    expression                     shift and go to state 7
    function_declaration           shift and go to state 8
    return_statement               shift and go to state 9
    type                           shift and go to state 10

state 2

    (1) program -> statement .

    IF              reduce using rule 1 (program -> statement .)
    WHILE           reduce using rule 1 (program -> statement .)
    NUMBER          reduce using rule 1 (program -> statement .)
    IDENTIFIER      reduce using rule 1 (program -> statement .)
    LPAREN          reduce using rule 1 (program -> statement .)
    TRUE            reduce using rule 1 (program -> statement .)
    FALSE           reduce using rule 1 (program -> statement .)
    NOT             reduce using rule 1 (program -> statement .)
    RETURN          reduce using rule 1 (program -> statement .)
    INT             reduce using rule 1 (program -> statement .)
    FLOAT           reduce using rule 1 (program -> statement .)
    BOOLEAN         reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)
    RBRACE          reduce using rule 1 (program -> statement .)


state 3

    (4) statement -> variable_declaration .

    IF              reduce using rule 4 (statement -> variable_declaration .)
    WHILE           reduce using rule 4 (statement -> variable_declaration .)
    NUMBER          reduce using rule 4 (statement -> variable_declaration .)
    IDENTIFIER      reduce using rule 4 (statement -> variable_declaration .)
    LPAREN          reduce using rule 4 (statement -> variable_declaration .)
    TRUE            reduce using rule 4 (statement -> variable_declaration .)
    FALSE           reduce using rule 4 (statement -> variable_declaration .)
    NOT             reduce using rule 4 (statement -> variable_declaration .)
    RETURN          reduce using rule 4 (statement -> variable_declaration .)
    INT             reduce using rule 4 (statement -> variable_declaration .)
    FLOAT           reduce using rule 4 (statement -> variable_declaration .)
    BOOLEAN         reduce using rule 4 (statement -> variable_declaration .)
    $end            reduce using rule 4 (statement -> variable_declaration .)
    RBRACE          reduce using rule 4 (statement -> variable_declaration .)


state 4

    (5) statement -> array_declaration .

    IF              reduce using rule 5 (statement -> array_declaration .)
    WHILE           reduce using rule 5 (statement -> array_declaration .)
    NUMBER          reduce using rule 5 (statement -> array_declaration .)
    IDENTIFIER      reduce using rule 5 (statement -> array_declaration .)
    LPAREN          reduce using rule 5 (statement -> array_declaration .)
    TRUE            reduce using rule 5 (statement -> array_declaration .)
    FALSE           reduce using rule 5 (statement -> array_declaration .)
    NOT             reduce using rule 5 (statement -> array_declaration .)
    RETURN          reduce using rule 5 (statement -> array_declaration .)
    INT             reduce using rule 5 (statement -> array_declaration .)
    FLOAT           reduce using rule 5 (statement -> array_declaration .)
    BOOLEAN         reduce using rule 5 (statement -> array_declaration .)
    $end            reduce using rule 5 (statement -> array_declaration .)
    RBRACE          reduce using rule 5 (statement -> array_declaration .)


state 5

    (6) statement -> if_statement .

    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    NUMBER          reduce using rule 6 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    LPAREN          reduce using rule 6 (statement -> if_statement .)
    TRUE            reduce using rule 6 (statement -> if_statement .)
    FALSE           reduce using rule 6 (statement -> if_statement .)
    NOT             reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    INT             reduce using rule 6 (statement -> if_statement .)
    FLOAT           reduce using rule 6 (statement -> if_statement .)
    BOOLEAN         reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 6

    (7) statement -> while_statement .

    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    NUMBER          reduce using rule 7 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> while_statement .)
    LPAREN          reduce using rule 7 (statement -> while_statement .)
    TRUE            reduce using rule 7 (statement -> while_statement .)
    FALSE           reduce using rule 7 (statement -> while_statement .)
    NOT             reduce using rule 7 (statement -> while_statement .)
    RETURN          reduce using rule 7 (statement -> while_statement .)
    INT             reduce using rule 7 (statement -> while_statement .)
    FLOAT           reduce using rule 7 (statement -> while_statement .)
    BOOLEAN         reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    RBRACE          reduce using rule 7 (statement -> while_statement .)


state 7

    (8) statement -> expression . EQUALS expression SEMICOLON
    (26) expression -> expression . PLUS expression
    (27) expression -> expression . MINUS expression
    (28) expression -> expression . MULTIPLY expression
    (29) expression -> expression . DIVIDE expression
    (31) expression -> expression . GREATER expression
    (32) expression -> expression . LESS expression
    (33) expression -> expression . AND expression
    (34) expression -> expression . OR expression
    (35) expression -> expression . EQEQ expression
    (36) expression -> expression . NOTEQ expression

    EQUALS          shift and go to state 24
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    MULTIPLY        shift and go to state 27
    DIVIDE          shift and go to state 28
    GREATER         shift and go to state 29
    LESS            shift and go to state 30
    AND             shift and go to state 31
    OR              shift and go to state 32
    EQEQ            shift and go to state 33
    NOTEQ           shift and go to state 34


state 8

    (9) statement -> function_declaration .

    IF              reduce using rule 9 (statement -> function_declaration .)
    WHILE           reduce using rule 9 (statement -> function_declaration .)
    NUMBER          reduce using rule 9 (statement -> function_declaration .)
    IDENTIFIER      reduce using rule 9 (statement -> function_declaration .)
    LPAREN          reduce using rule 9 (statement -> function_declaration .)
    TRUE            reduce using rule 9 (statement -> function_declaration .)
    FALSE           reduce using rule 9 (statement -> function_declaration .)
    NOT             reduce using rule 9 (statement -> function_declaration .)
    RETURN          reduce using rule 9 (statement -> function_declaration .)
    INT             reduce using rule 9 (statement -> function_declaration .)
    FLOAT           reduce using rule 9 (statement -> function_declaration .)
    BOOLEAN         reduce using rule 9 (statement -> function_declaration .)
    $end            reduce using rule 9 (statement -> function_declaration .)
    RBRACE          reduce using rule 9 (statement -> function_declaration .)


state 9

    (10) statement -> return_statement .

    IF              reduce using rule 10 (statement -> return_statement .)
    WHILE           reduce using rule 10 (statement -> return_statement .)
    NUMBER          reduce using rule 10 (statement -> return_statement .)
    IDENTIFIER      reduce using rule 10 (statement -> return_statement .)
    LPAREN          reduce using rule 10 (statement -> return_statement .)
    TRUE            reduce using rule 10 (statement -> return_statement .)
    FALSE           reduce using rule 10 (statement -> return_statement .)
    NOT             reduce using rule 10 (statement -> return_statement .)
    RETURN          reduce using rule 10 (statement -> return_statement .)
    INT             reduce using rule 10 (statement -> return_statement .)
    FLOAT           reduce using rule 10 (statement -> return_statement .)
    BOOLEAN         reduce using rule 10 (statement -> return_statement .)
    $end            reduce using rule 10 (statement -> return_statement .)
    RBRACE          reduce using rule 10 (statement -> return_statement .)


state 10

    (11) variable_declaration -> type . IDENTIFIER EQUALS expression SEMICOLON
    (12) variable_declaration -> type . IDENTIFIER SEMICOLON
    (13) array_declaration -> type . IDENTIFIER SLBRACE NUMBER SRBRACE SEMICOLON
    (14) array_declaration -> type . IDENTIFIER SLBRACE SRBRACE EQUALS LBRACE array_elements RBRACE SEMICOLON
    (17) function_declaration -> type . IDENTIFIER LPAREN parameter_list RPAREN LBRACE program RBRACE
    (18) function_declaration -> type . IDENTIFIER LPAREN RPAREN LBRACE program RBRACE

    IDENTIFIER      shift and go to state 35


state 11

    (25) expression -> IDENTIFIER .

    EQUALS          reduce using rule 25 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 25 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 25 (expression -> IDENTIFIER .)
    MULTIPLY        reduce using rule 25 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 25 (expression -> IDENTIFIER .)
    GREATER         reduce using rule 25 (expression -> IDENTIFIER .)
    LESS            reduce using rule 25 (expression -> IDENTIFIER .)
    AND             reduce using rule 25 (expression -> IDENTIFIER .)
    OR              reduce using rule 25 (expression -> IDENTIFIER .)
    EQEQ            reduce using rule 25 (expression -> IDENTIFIER .)
    NOTEQ           reduce using rule 25 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 25 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 25 (expression -> IDENTIFIER .)
    RBRACE          reduce using rule 25 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 25 (expression -> IDENTIFIER .)


state 12

    (24) expression -> NUMBER .

    EQUALS          reduce using rule 24 (expression -> NUMBER .)
    PLUS            reduce using rule 24 (expression -> NUMBER .)
    MINUS           reduce using rule 24 (expression -> NUMBER .)
    MULTIPLY        reduce using rule 24 (expression -> NUMBER .)
    DIVIDE          reduce using rule 24 (expression -> NUMBER .)
    GREATER         reduce using rule 24 (expression -> NUMBER .)
    LESS            reduce using rule 24 (expression -> NUMBER .)
    AND             reduce using rule 24 (expression -> NUMBER .)
    OR              reduce using rule 24 (expression -> NUMBER .)
    EQEQ            reduce using rule 24 (expression -> NUMBER .)
    NOTEQ           reduce using rule 24 (expression -> NUMBER .)
    RPAREN          reduce using rule 24 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 24 (expression -> NUMBER .)
    RBRACE          reduce using rule 24 (expression -> NUMBER .)
    COMMA           reduce using rule 24 (expression -> NUMBER .)


state 13

    (40) if_statement -> IF . LPAREN expression RPAREN LBRACE program RBRACE
    (41) if_statement -> IF . LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE

    LPAREN          shift and go to state 36


state 14

    (30) expression -> LPAREN . expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 37

state 15

    (42) while_statement -> WHILE . LPAREN expression RPAREN LBRACE program RBRACE

    LPAREN          shift and go to state 38


state 16

    (37) expression -> TRUE .

    EQUALS          reduce using rule 37 (expression -> TRUE .)
    PLUS            reduce using rule 37 (expression -> TRUE .)
    MINUS           reduce using rule 37 (expression -> TRUE .)
    MULTIPLY        reduce using rule 37 (expression -> TRUE .)
    DIVIDE          reduce using rule 37 (expression -> TRUE .)
    GREATER         reduce using rule 37 (expression -> TRUE .)
    LESS            reduce using rule 37 (expression -> TRUE .)
    AND             reduce using rule 37 (expression -> TRUE .)
    OR              reduce using rule 37 (expression -> TRUE .)
    EQEQ            reduce using rule 37 (expression -> TRUE .)
    NOTEQ           reduce using rule 37 (expression -> TRUE .)
    RPAREN          reduce using rule 37 (expression -> TRUE .)
    SEMICOLON       reduce using rule 37 (expression -> TRUE .)
    RBRACE          reduce using rule 37 (expression -> TRUE .)
    COMMA           reduce using rule 37 (expression -> TRUE .)


state 17

    (38) expression -> FALSE .

    EQUALS          reduce using rule 38 (expression -> FALSE .)
    PLUS            reduce using rule 38 (expression -> FALSE .)
    MINUS           reduce using rule 38 (expression -> FALSE .)
    MULTIPLY        reduce using rule 38 (expression -> FALSE .)
    DIVIDE          reduce using rule 38 (expression -> FALSE .)
    GREATER         reduce using rule 38 (expression -> FALSE .)
    LESS            reduce using rule 38 (expression -> FALSE .)
    AND             reduce using rule 38 (expression -> FALSE .)
    OR              reduce using rule 38 (expression -> FALSE .)
    EQEQ            reduce using rule 38 (expression -> FALSE .)
    NOTEQ           reduce using rule 38 (expression -> FALSE .)
    RPAREN          reduce using rule 38 (expression -> FALSE .)
    SEMICOLON       reduce using rule 38 (expression -> FALSE .)
    RBRACE          reduce using rule 38 (expression -> FALSE .)
    COMMA           reduce using rule 38 (expression -> FALSE .)


state 18

    (39) expression -> NOT . expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 39

state 19

    (3) return_statement -> RETURN . expression SEMICOLON
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 40

state 20

    (21) type -> INT .

    IDENTIFIER      reduce using rule 21 (type -> INT .)


state 21

    (22) type -> FLOAT .

    IDENTIFIER      reduce using rule 22 (type -> FLOAT .)


state 22

    (23) type -> BOOLEAN .

    IDENTIFIER      reduce using rule 23 (type -> BOOLEAN .)


state 23

    (2) program -> program statement .

    IF              reduce using rule 2 (program -> program statement .)
    WHILE           reduce using rule 2 (program -> program statement .)
    NUMBER          reduce using rule 2 (program -> program statement .)
    IDENTIFIER      reduce using rule 2 (program -> program statement .)
    LPAREN          reduce using rule 2 (program -> program statement .)
    TRUE            reduce using rule 2 (program -> program statement .)
    FALSE           reduce using rule 2 (program -> program statement .)
    NOT             reduce using rule 2 (program -> program statement .)
    RETURN          reduce using rule 2 (program -> program statement .)
    INT             reduce using rule 2 (program -> program statement .)
    FLOAT           reduce using rule 2 (program -> program statement .)
    BOOLEAN         reduce using rule 2 (program -> program statement .)
    $end            reduce using rule 2 (program -> program statement .)
    RBRACE          reduce using rule 2 (program -> program statement .)


state 24

    (8) statement -> expression EQUALS . expression SEMICOLON
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 41

state 25

    (26) expression -> expression PLUS . expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 42

state 26

    (27) expression -> expression MINUS . expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 43

state 27

    (28) expression -> expression MULTIPLY . expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 44

state 28

    (29) expression -> expression DIVIDE . expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 45

state 29

    (31) expression -> expression GREATER . expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 46

state 30

    (32) expression -> expression LESS . expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 47

state 31

    (33) expression -> expression AND . expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression MULTIPLY expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression GREATER expression
    (32) expression -> . expression LESS expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQEQ expression
    (36) expression -> . expression NOTEQ expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (39) expression -> . NOT expression

    NUMBER          shift and go to state 12
    IDENTIFIER      shift and go to state 11
    LPAREN          shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NOT             shift and go to state 18

    expression                     shift and go to state 48

state 32
